# snapmerge

./: .gitignore  README.md  config.yaml  main.py  make_release.bat  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
src/snapmerge/: app.py  app_qt--.py  app_qt.py  config.py  logging_setup.py  main--.py  main_app-- original.py  main_app.py  merge_worker.py  pipeline - Copy.py  pipeline.py  types.py  types_job_types.py
src/snapmerge/app_version/: build_info.py  version.py  version_info.txt  version_info_template.txt  write_build_info.py  write_version_info.py
src/snapmerge/services/: doc_migrate.py  docx_to_pdf - no docx2pdf.py  docx_to_pdf -- origen.py  docx_to_pdf with docx2pdf.py  docx_to_pdf.py  eml_to_pdf.py  file_discovery.py  file_names.py  image_to_pdf.py  pdf_merge.py  temp_utils.py
src/snapmerge/thread_worker/: doc_pages_worker.py  merge_worker.py
src/snapmerge/ui/: SnapMerge.ui  snap_merge_app.py  snap_merge_app.ui  snap_merge_app_ui.py  widgets.py
tests/: test_pipeline.py
